Fix scoreboard spacing

--- a/app/assets/stylesheets/pages/scoreboard.styl
+++ b/app/assets/stylesheets/pages/scoreboard.styl
@@ -1,5 +1,5 @@
 .scoreboard 
-  margin 0 auto
+  margin 0 auto 100px
 
   // scoreboard
   h1
